--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Share Stuff</title>
-	<style>
-		body {
-			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-			max-width: 800px;
-			margin: 0 auto;
-			padding: 20px;
-			line-height: 1.6;
-		}
-		h1 {
-			color: #333;
-			text-align: center;
-		}
-		.container {
-			margin-top: 40px;
-			text-align: center;
-		}
-		.upload-link {
-			display: inline-block;
-			margin-top: 20px;
-			padding: 10px 20px;
-			background-color: #4a89dc;
-			color: white;
-			text-decoration: none;
-			border-radius: 4px;
-			font-weight: bold;
-		}
-	</style>
-</head>
-<body>
-	<h1>Share Stuff</h1>
-	<div class="container">
-		<p>Welcome to Share Stuff, an easy way to share your files.</p>
-		<a href="/upload" class="upload-link">Upload a File</a>
-	</div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Sloth Share</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet" />
+		<style>
+			body {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				height: 100vh;
+				overflow: hidden;
+				background-color: #f0f0f0;
+				margin: 0;
+				font-family: cursive;
+			}
+
+			.polaroid {
+				width: 300px;
+				padding: 10px 10px 30px 10px;
+				border: 1px solid #bfbfbf;
+				background-color: white;
+				box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+				text-align: center;
+				transform: rotate(-5deg);
+			}
+
+			.polaroid:hover {
+				transform: rotate(0deg) scale(1.05);
+				box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+			}
+
+			.polaroid img {
+				width: 100%;
+				height: auto;
+			}
+
+			.caption {
+				margin-top: 10px;
+				font-size: 16px;
+				color: #333;
+			}
+		</style>
+	</head>
+	<body>
+		<a href="/upload" style="text-decoration: none; color: inherit">
+			<div class="polaroid">
+				<img src="sloth_share.png" alt="Sloth sharing pineapple" />
+				<div class="caption">Share stuff. Be Happy.</div>
+			</div>
+		</a>
+	</body>
 </html>
